--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-INFURA_ID=
-VAULT_WALLET_ADDRESS=
-DEPOSIT_WALLET_PRIVATE_KEY=
+INFURA_ID=81fa4b15d6fb4d6895c0952d4c851baf
+VAULT_WALLET_ADDRESS=UQDaNa9_LJvluMAy_GxRSPG36UUJz5yeu5YkIroS04jvtVJk
+DEPOSIT_WALLET_PRIVATE_KEY=world language hockey forum split step chalk chat eye exchange cage buddy foil auction border scene true public purse picnic absorb among exhaust coral
 CONFIRMATIONS_BEFORE_WITHDRAWAL=5
